<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="my_apps">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="open_app">This button will launch my</string>

    <string name="spotify_streamer">SPOTIFY STREAMER</string>
    <string name="scores_appp">SCORES APP</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="xyz_reader">XYZ READER</string>
    <string name="capstone">CAPSTONE: MY OWN APP</string>

</resources>
