<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:text="@string/my_apps"
        android:textColor="@color/black"
        android:textSize="28sp" />

    <Button
        android:id="@+id/spotify"
        android:layout_width="@dimen/button"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@color/orange"
        android:text="@string/spotify_streamer"
        android:textSize="18sp" />

    <Button
        android:id="@+id/scores"
        android:layout_width="@dimen/button"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@color/orange"
        android:text="@string/scores_appp"
        android:textSize="18sp" />

    <Button
        android:id="@+id/library"
        android:layout_width="@dimen/button"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@color/orange"
        android:text="@string/library_app"
        android:textSize="18sp" />

    <Button
        android:id="@+id/build"
        android:layout_width="@dimen/button"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@color/orange"
        android:text="@string/build_it_bigger"
        android:textSize="18sp" />

    <Button
        android:id="@+id/xyz"
        android:layout_width="@dimen/button"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@color/orange"
        android:text="@string/xyz_reader"
        android:textSize="18sp" />

    <Button
        android:id="@+id/capstone"
        android:layout_width="@dimen/button"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@color/red"
        android:text="@string/capstone"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>
